--- a/Primer-Design-in-Anopheles-gambiae.ipynb
+++ b/Primer-Design-in-Anopheles-gambiae.ipynb
@@ -25,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "528ae85d",
       "metadata": {
         "id": "528ae85d"
@@ -85,7 +85,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "acd4690c",
       "metadata": {
         "id": "acd4690c"
@@ -95,7 +95,8 @@
         "name = 'Example_primer'      # Name for primer set\n",
         "contig = '2L'                # Contig out of 2L, 2R, 3L, 3R and X \n",
         "target_snp = 28_545_000       # This should be the position in base pairs of where you want the primers to target\n",
-        "amplicon_size_range = [[125,225]] # How large do we want the amplicon to be? here, e.g 125-225bp"
+        "amplicon_size_range = [[125,225]] # How large do we want the amplicon to be? here, e.g 125-225bp\n",
+        "n_primer_pairs = 10"
       ]
     },
     {
@@ -110,7 +111,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "5fa0be8d",
       "metadata": {
         "colab": {
@@ -144,7 +145,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "ed23955d",
       "metadata": {
         "colab": {
@@ -171,7 +172,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "3fd0e91b",
       "metadata": {
         "colab": {
@@ -212,7 +213,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "5ff67bbc",
       "metadata": {
         "colab": {
@@ -251,7 +252,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "622ac6d9",
       "metadata": {
         "id": "622ac6d9"
@@ -265,9 +266,10 @@
         "    }\n",
         "    \n",
         "primer_parameters  =  {\n",
+        "        'PRIMER_NUM_RETURN':n_primer_pairs,\n",
         "        'PRIMER_OPT_SIZE': 20,\n",
         "        'PRIMER_PICK_RIGHT_PRIMER':1,\n",
-        "        'PRIMER_PICK_INTERNAL_OLIGO': 0, # If you change this value, if \n",
+        "        'PRIMER_PICK_INTERNAL_OLIGO': 0, \n",
         "        'PRIMER_PICK_LEFT_PRIMER':1,\n",
         "        'PRIMER_TASK':'generic',\n",
         "        'PRIMER_INTERNAL_MAX_SELF_END': 8,\n",
@@ -305,7 +307,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "ae6e7525",
       "metadata": {
         "scrolled": false,
@@ -328,7 +330,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "1bb40846",
       "metadata": {
         "colab": {
@@ -370,7 +372,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "bf8c5970",
       "metadata": {
         "colab": {
@@ -654,7 +656,7 @@
         "id": "09eQYSeT7lHG"
       },
       "id": "09eQYSeT7lHG",
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -671,7 +673,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "id": "61286685",
       "metadata": {
         "id": "61286685",
@@ -738,7 +740,7 @@
         "outputId": "ba38b059-2651-45b8-f2e6-22f0d049944a"
       },
       "id": "iSTRbVpxD3oy",
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1472,7 +1474,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "id": "49ca7f2b",
       "metadata": {
         "id": "49ca7f2b"
@@ -1494,7 +1496,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "id": "da5c34b8",
       "metadata": {
         "id": "da5c34b8"
@@ -1603,7 +1605,7 @@
         "outputId": "751041f0-0ed3-4130-b1a0-89e062837c23"
       },
       "id": "shXKBpG49LSU",
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1633,7 +1635,7 @@
         "outputId": "5605f634-41df-4dc3-dd3b-326fb9bba7eb"
       },
       "id": "yIAScyTPluex",
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
