commenting out final cell figure plots

--- a/Primer-Design-in-Anopheles-gambiae.ipynb
+++ b/Primer-Design-in-Anopheles-gambiae.ipynb
@@ -24,7 +24,7 @@
         }
       },
       "id": "AM9EeHef6tAD",
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -51,7 +51,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "528ae85d",
       "metadata": {
         "id": "528ae85d"
@@ -154,7 +154,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "acd4690c",
       "metadata": {
         "id": "acd4690c"
@@ -183,7 +183,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "5fa0be8d",
       "metadata": {
         "colab": {
@@ -246,7 +246,7 @@
         "outputId": "d7178c9c-f6dc-480f-c77c-38ab58ee995a"
       },
       "id": "R0CkEd38VXGY",
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -272,7 +272,7 @@
         }
       },
       "id": "MDNgep0sqAI7",
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -300,7 +300,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "622ac6d9",
       "metadata": {
         "id": "622ac6d9"
@@ -346,7 +346,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "ae6e7525",
       "metadata": {
         "scrolled": false,
@@ -369,7 +369,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "1bb40846",
       "metadata": {
         "colab": {
@@ -421,7 +421,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "bf8c5970",
       "metadata": {
         "colab": {
@@ -955,7 +955,7 @@
         "id": "09eQYSeT7lHG"
       },
       "id": "09eQYSeT7lHG",
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -972,7 +972,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "id": "61286685",
       "metadata": {
         "id": "61286685",
@@ -1033,7 +1033,7 @@
         "id": "iSTRbVpxD3oy"
       },
       "id": "iSTRbVpxD3oy",
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1050,7 +1050,7 @@
         }
       },
       "id": "abZwAhCVKq4R",
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1227,7 +1227,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "id": "49ca7f2b",
       "metadata": {
         "id": "49ca7f2b"
@@ -1249,7 +1249,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 92,
+      "execution_count": null,
       "id": "da5c34b8",
       "metadata": {
         "id": "da5c34b8"
@@ -1398,7 +1398,7 @@
         "outputId": "b9c13d84-4a2f-4d2c-c43c-1c37777618f8"
       },
       "id": "shXKBpG49LSU",
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1428,7 +1428,7 @@
         "outputId": "e3edf214-62f8-4cf2-d637-179723b33d3f"
       },
       "id": "0JA92ApBcxLo",
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1963,63 +1963,63 @@
     {
       "cell_type": "code",
       "source": [
-        "#### code to plot genes and primer positions, not finished\n",
-        "import matplotlib\n",
-        "from matplotlib import patches\n",
+        "# #### code to plot genes and primer positions, not finished\n",
+        "# import matplotlib\n",
+        "# from matplotlib import patches\n",
         "\n",
-        "def plot_genes_primers(contig, start, stop, n_primer_pairs, ax, di_fwd, di_rev):\n",
-        "    # Load geneset (gff)\n",
-        "    gff = ag3.geneset().query(\"start > @start & end < @stop\")\n",
-        "    genegff = gff.query(\"type == 'gene' & contig == @contig\")\n",
-        "    locgff = gff.query(\"type == 'exon' & contig == @contig\")\n",
-        "    min_= locgff.start.min()\n",
-        "    max_ = locgff.end.max()\n",
-        "    # configure axes\n",
-        "    ax.set_xlim(min_, max_)\n",
-        "    ax.set_ylim(-0.5, 2)\n",
-        "    ax.axhline(0.5, color='k', linewidth=3)\n",
-        "    #ax.set_yticks(ticks=[0.2,1.2], size=20)#labels=['- ', '+']\n",
-        "    ax.tick_params(top=False,left=False,right=False,labelleft=True,labelbottom=True)\n",
-        "    ax.tick_params(axis='x', which='major', labelsize=13)\n",
-        "    ax.set_ylabel(\"Genes\")\n",
-        "    ax.set_xlabel(f\"Chromosome {contig} position\", fontdict={'fontsize':14})\n",
-        "    # Add rectangles for exons one at a time \n",
-        "    for _, exon in locgff.iterrows():\n",
-        "        start, end = exon[['start', 'end']]\n",
-        "        strand = exon['strand']\n",
-        "        if strand == '+':\n",
-        "            rect = patches.Rectangle((start, 0.55), end-start, 0.3, linewidth=3,\n",
-        "                                edgecolor='none', facecolor=\"grey\", alpha=0.9)\n",
-        "        else:\n",
-        "            rect = patches.Rectangle((start, 0.45), end-start, -0.3, linewidth=3,\n",
-        "                                edgecolor='none', facecolor=\"grey\", alpha=0.9)\n",
-        "        ax.add_patch(rect)\n",
+        "# def plot_genes_primers(contig, start, stop, n_primer_pairs, ax, di_fwd, di_rev):\n",
+        "#     # Load geneset (gff)\n",
+        "#     gff = ag3.geneset().query(\"start > @start & end < @stop\")\n",
+        "#     genegff = gff.query(\"type == 'gene' & contig == @contig\")\n",
+        "#     locgff = gff.query(\"type == 'exon' & contig == @contig\")\n",
+        "#     min_= locgff.start.min()\n",
+        "#     max_ = locgff.end.max()\n",
+        "#     # configure axes\n",
+        "#     ax.set_xlim(min_, max_)\n",
+        "#     ax.set_ylim(-0.5, 2)\n",
+        "#     ax.axhline(0.5, color='k', linewidth=3)\n",
+        "#     #ax.set_yticks(ticks=[0.2,1.2], size=20)#labels=['- ', '+']\n",
+        "#     ax.tick_params(top=False,left=False,right=False,labelleft=True,labelbottom=True)\n",
+        "#     ax.tick_params(axis='x', which='major', labelsize=13)\n",
+        "#     ax.set_ylabel(\"Genes\")\n",
+        "#     ax.set_xlabel(f\"Chromosome {contig} position\", fontdict={'fontsize':14})\n",
+        "#     # Add rectangles for exons one at a time \n",
+        "#     for _, exon in locgff.iterrows():\n",
+        "#         start, end = exon[['start', 'end']]\n",
+        "#         strand = exon['strand']\n",
+        "#         if strand == '+':\n",
+        "#             rect = patches.Rectangle((start, 0.55), end-start, 0.3, linewidth=3,\n",
+        "#                                 edgecolor='none', facecolor=\"grey\", alpha=0.9)\n",
+        "#         else:\n",
+        "#             rect = patches.Rectangle((start, 0.45), end-start, -0.3, linewidth=3,\n",
+        "#                                 edgecolor='none', facecolor=\"grey\", alpha=0.9)\n",
+        "#         ax.add_patch(rect)\n",
         "\n",
-        "    for _, gene in genegff.iterrows():\n",
-        "        start, end = gene[['start', 'end']]\n",
-        "        size = end-start\n",
-        "        corr = size/4\n",
-        "        strand = gene['strand']\n",
-        "        if strand == '+':\n",
-        "            rect = patches.Rectangle((start, 0.55), end-start, 0.3, linewidth=3,\n",
-        "                                edgecolor='black', facecolor=\"none\")\n",
-        "            ax.text(((start+end)/2)-corr, 0.95, s=gene['ID'], fontdict= {'fontsize':12})\n",
-        "        else:\n",
-        "            rect = patches.Rectangle((start, 0.45), end-start, -0.3, linewidth=3,\n",
-        "                                edgecolor='black', facecolor=\"none\")\n",
-        "           # ax.text(((start+end)/2)-corr,  -0.3, s=gene['ID'], fontdict= {'fontsize':12})\n",
-        "        ax.add_patch(rect)\n",
+        "#     for _, gene in genegff.iterrows():\n",
+        "#         start, end = gene[['start', 'end']]\n",
+        "#         size = end-start\n",
+        "#         corr = size/4\n",
+        "#         strand = gene['strand']\n",
+        "#         if strand == '+':\n",
+        "#             rect = patches.Rectangle((start, 0.55), end-start, 0.3, linewidth=3,\n",
+        "#                                 edgecolor='black', facecolor=\"none\")\n",
+        "#             ax.text(((start+end)/2)-corr, 0.95, s=gene['ID'], fontdict= {'fontsize':12})\n",
+        "#         else:\n",
+        "#             rect = patches.Rectangle((start, 0.45), end-start, -0.3, linewidth=3,\n",
+        "#                                 edgecolor='black', facecolor=\"none\")\n",
+        "#            # ax.text(((start+end)/2)-corr,  -0.3, s=gene['ID'], fontdict= {'fontsize':12})\n",
+        "#         ax.add_patch(rect)\n",
         "\n",
-        "        for pair in range(n_primer_pairs):\n",
-        "          lower_fwd, upper_fwd = di_fwd[pair]['position'].min() , di_fwd[pair]['position'].max()\n",
-        "          lower_rev, upper_rev = di_rev[pair]['position'].min() , di_rev[pair]['position'].max()\n",
-        "          l = matplotlib.lines.Line2D([lower_fwd, upper_fwd], [-0.5 + (2.5/n_primer_pairs)*(pair+1), -0.5+(2.5/n_primer_pairs)*(pair+1)])\n",
-        "          ax.add_line(l)\n",
-        "          l = matplotlib.lines.Line2D([lower_rev, lower_rev], [-0.5 + (2.5/n_primer_pairs)*(pair+1), -0.5+(2.5/n_primer_pairs)*(pair+1)])\n",
-        "          ax.add_line(l)\n",
+        "#         for pair in range(n_primer_pairs):\n",
+        "#           lower_fwd, upper_fwd = di_fwd[pair]['position'].min() , di_fwd[pair]['position'].max()\n",
+        "#           lower_rev, upper_rev = di_rev[pair]['position'].min() , di_rev[pair]['position'].max()\n",
+        "#           l = matplotlib.lines.Line2D([lower_fwd, upper_fwd], [-0.5 + (2.5/n_primer_pairs)*(pair+1), -0.5+(2.5/n_primer_pairs)*(pair+1)])\n",
+        "#           ax.add_line(l)\n",
+        "#           l = matplotlib.lines.Line2D([lower_rev, lower_rev], [-0.5 + (2.5/n_primer_pairs)*(pair+1), -0.5+(2.5/n_primer_pairs)*(pair+1)])\n",
+        "#           ax.add_line(l)\n",
         "\n",
-        "fig, ax = plt.subplots(1,1, figsize=[12,8])\n",
-        "plot_genes_primers(contig=contig, start=target_loc-200, stop=target_loc+200, n_primer_pairs=1, ax=ax, di_fwd=di_fwd, di_rev=di_rev)"
+        "# fig, ax = plt.subplots(1,1, figsize=[12,8])\n",
+        "# plot_genes_primers(contig=contig, start=target_loc-200, stop=target_loc+200, n_primer_pairs=1, ax=ax, di_fwd=di_fwd, di_rev=di_rev)"
       ],
       "metadata": {
         "id": "-rzf3HFjiPSC"
