--- a/Primer-Design-in-Anopheles-gambiae.ipynb
+++ b/Primer-Design-in-Anopheles-gambiae.ipynb
@@ -12,14 +12,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "id": "AM9EeHef6tAD",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "AM9EeHef6tAD",
-        "outputId": "9c543436-dc2e-40bb-adf5-00245e2ebf21"
+        "outputId": "c2612993-67cb-4d18-de52-640f514ef87c"
       },
       "outputs": [
         {
@@ -30,19 +30,19 @@
             "  Getting requirements to build wheel ... \u001b[?25l\u001b[?25hdone\n",
             "  Installing backend dependencies ... \u001b[?25l\u001b[?25hdone\n",
             "    Preparing wheel metadata ... \u001b[?25l\u001b[?25hdone\n",
-            "\u001b[K     |████████████████████████████████| 397 kB 23.7 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 61 kB 344 kB/s \n",
-            "\u001b[K     |████████████████████████████████| 5.7 MB 43.5 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 3.3 MB 59.5 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 2.3 MB 46.3 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 140 kB 56.7 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 300 kB 57.9 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 153 kB 68.0 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 1.1 MB 46.3 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 144 kB 58.5 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 94 kB 4.4 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 271 kB 58.4 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 6.2 MB 34.3 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 397 kB 656 kB/s \n",
+            "\u001b[K     |████████████████████████████████| 62 kB 539 kB/s \n",
+            "\u001b[K     |████████████████████████████████| 5.7 MB 8.5 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 140 kB 69.4 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 153 kB 72.5 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 2.3 MB 55.1 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 300 kB 63.7 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 3.3 MB 33.8 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 1.1 MB 48.5 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 271 kB 75.2 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 144 kB 58.9 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 94 kB 1.2 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 6.2 MB 17.2 MB/s \n",
             "\u001b[?25h  Building wheel for agamPrimer (PEP 517) ... \u001b[?25l\u001b[?25hdone\n",
             "  Building wheel for primer3-py (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
             "  Building wheel for asciitree (setup.py) ... \u001b[?25l\u001b[?25hdone\n"
@@ -56,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 5,
       "id": "528ae85d",
       "metadata": {
         "id": "528ae85d"
@@ -82,11 +82,8 @@
       },
       "source": [
         "#**Primer design incorporating genetic variation in *Anopheles gambiae***\n",
-        "**Author**: Sanjay Curtis Nagi    \n",
+        "**Author**: [Sanjay Curtis Nagi](https://sanjaynagi.github.io/)    \n",
         "**Email**: sanjay.nagi@lstmed.ac.uk\n",
-        "\n",
-        "\n",
-        "\n",
         "\n",
         "Often, we would like to design primers for PCR applications, such as genotyping (PCR, TaqMan, LNA) or gene expression qPCR (SYBR, TaqMan, LNA). However, single nucleotide polymorphisms (SNPs) in primer binding sites can result in differences or failures in PCR amplification, referred to as null alleles. \n",
         "\n",
@@ -101,7 +98,7 @@
         "\n",
         "Currently, the notebook supports only standard genomic DNA primers, however, we will add support for qPCR primers (which should span exon-exon junctions) and probe design. It will probably also be useful to have some form of batch primer design. In the case that there are less acceptable primers than requested, or Ns in the referene, currently i think the workflow will break.\n",
         "\n",
-        "Any contributions or suggestions on how we can improve this notebook, are more than welcome. "
+        "Any contributions or suggestions on how we can improve this notebook, are more than welcome. Please [email](mailto:sanjay.nagi@lstmed.ac.uk) or log an [issue on github](https://github.com/sanjaynagi/primerDesignAg/issues)."
       ]
     },
     {
@@ -117,21 +114,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 6,
       "id": "acd4690c",
       "metadata": {
         "id": "acd4690c"
       },
       "outputs": [],
       "source": [
-        "assay_type = 'qPCR' #'gDNA'\n",
+        "assay_type = 'qPCR' #'gDNA'           #'gDNA' or 'qPCR'\n",
         "name = 'coeae1f'                      # Name for primer set\n",
         "contig = '2L'                         # Contig out of 2L, 2R, 3L, 3R and X\n",
         "amplicon_size_range = [[125,225]]     # How large do we want the amplicon to be? here, e.g 125-225bp\n",
         "n_primer_pairs = 20                   # How many primer pairs to request\n",
         "\n",
         "target_loc = 28_525_000               # gDNA primers only. This should be the location in base pairs of where you want the primers to target. underscores mean nothing and are just helpful for reading large numbers. \n",
-        "transcript = 'AGAP006227-RA'                   # qPCR primers only.  "
+        "transcript = 'AGAP006227-RA'          # qPCR primers only.  "
       ]
     },
     {
@@ -146,16 +143,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 7,
       "id": "5fa0be8d",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "5fa0be8d",
-        "outputId": "d0ceb246-c582-489d-cd81-8c92c9469448"
+        "outputId": "efe93e49-1a09-455d-f807-9c317319934c"
       },
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/malariagen_data/ag3.py:260: UserWarning: \n",
+            "Your currently allocated Google Colab VM is not located in the US.\n",
+            "This usually means that data access will be substantially slower.\n",
+            "If possible, select \"Runtime > Factory reset runtime\" from the menu\n",
+            "to request a new VM and try again.\n",
+            "\n",
+            "  \"\"\"\n"
+          ]
+        },
         {
           "output_type": "stream",
           "name": "stdout",
@@ -194,14 +204,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 8,
       "id": "R0CkEd38VXGY",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "R0CkEd38VXGY",
-        "outputId": "cc6b90fd-61fd-4d81-804c-d353bcfad373"
+        "outputId": "5fee4e8e-8438-4b53-81a7-921269418ebd"
       },
       "outputs": [
         {
@@ -238,7 +248,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 9,
       "id": "622ac6d9",
       "metadata": {
         "id": "622ac6d9"
@@ -248,9 +258,13 @@
         "seq_parameters = {\n",
         "        'SEQUENCE_ID': name,\n",
         "        'SEQUENCE_TEMPLATE': target_sequence,\n",
-        "    #   'SEQUENCE_TARGET': target_loc_primer3,                   ## for gDNA primers only ##\n",
-        "        'SEQUENCE_OVERLAP_JUNCTION_LIST': exon_junctions,       ## For qPCR primers only # remove or comment out line for gDNA primers\n",
         "    }\n",
+        "\n",
+        "# need to add either target location for DNA or exon junctions for qPCR\n",
+        "if assay_type == 'gDNA':\n",
+        "  seq_parameters['SEQUENCE_TARGET'] = target_loc_primer3\n",
+        "elif assay_type == 'qPCR':\n",
+        "  seq_parameters['SEQUENCE_OVERLAP_JUNCTION_LIST'] = exon_junctions  \n",
         "    \n",
         "primer_parameters  =  {\n",
         "        'PRIMER_NUM_RETURN':n_primer_pairs,\n",
@@ -284,7 +298,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 10,
       "id": "ae6e7525",
       "metadata": {
         "id": "ae6e7525",
@@ -302,19 +316,19 @@
         "id": "56945ca6"
       },
       "source": [
-        "Its should be very fast. The output, which we call 'primer_dict', is a python dictionary containing the full results from primer3. We will turn this into a pandas dataframe, containing just the necessary bits of information. First, lets print some information from the primer3 run. The first 7 rows of the data frame are general statistics from the run. "
+        "Its should be *very fast*. The output, which we call 'primer_dict', is a python dictionary containing the full results from primer3. We will turn this into a pandas dataframe (a useful, pretty table), containing just the necessary bits of information. First, lets print some information from the primer3 run. The first 7 rows of the data frame are general statistics from the run, like the number of primer pairs considered and failed:"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 11,
       "id": "1bb40846",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "1bb40846",
-        "outputId": "f2d816db-9992-44a2-87df-052b92c3f481"
+        "outputId": "0a0854b2-cb62-4fd4-fe85-0fc97c3da1ce"
       },
       "outputs": [
         {
@@ -359,7 +373,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "bf8c5970",
       "metadata": {
         "colab": {
@@ -886,7 +900,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "09eQYSeT7lHG",
       "metadata": {
         "id": "09eQYSeT7lHG"
@@ -910,7 +924,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "61286685",
       "metadata": {
         "colab": {
@@ -955,7 +969,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "iSTRbVpxD3oy",
       "metadata": {
         "id": "iSTRbVpxD3oy"
@@ -976,7 +990,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "id": "abZwAhCVKq4R",
       "metadata": {
         "colab": {
@@ -1306,7 +1320,7 @@
         }
       ],
       "source": [
-        "pivot_country_year_taxon.head(10)"
+        "pivot_country_year_taxon"
       ]
     },
     {
@@ -1321,7 +1335,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "id": "49ca7f2b",
       "metadata": {
         "id": "49ca7f2b"
@@ -1347,7 +1361,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "id": "shXKBpG49LSU",
       "metadata": {
         "colab": {
@@ -1399,7 +1413,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "id": "0JA92ApBcxLo",
       "metadata": {
         "colab": {
@@ -1945,7 +1959,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "id": "-rzf3HFjiPSC",
       "metadata": {
         "id": "-rzf3HFjiPSC"
