changed initial primer parameter entry to a form rather than code cell

--- a/Primer-Design-in-Anopheles-gambiae.ipynb
+++ b/Primer-Design-in-Anopheles-gambiae.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "AM9EeHef6tAD",
       "metadata": {
         "colab": {
@@ -56,30 +56,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "528ae85d",
       "metadata": {
-        "id": "528ae85d",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "2fe30b2d-f698-48c4-fa90-01bc32b281f3"
+        "id": "528ae85d"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/malariagen_data/ag3.py:260: UserWarning: \n",
-            "Your currently allocated Google Colab VM is not located in the US.\n",
-            "This usually means that data access will be substantially slower.\n",
-            "If possible, select \"Runtime > Factory reset runtime\" from the menu\n",
-            "to request a new VM and try again.\n",
-            "\n",
-            "  \"\"\"\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Import libraries \n",
         "import agamPrimer\n",
@@ -112,30 +94,42 @@
         "\n",
         "####**Google Colab**\n",
         "\n",
-        "If you are unfamiliar with iPython notebooks and google colab, I encourage you to watch the following [introduction](https://www.youtube.com/watch?v=inN8seMm7UI). In general, the cells can be run by pressing the play button next to each cell, and should be run in order.\n",
-        "___\n",
-        "### **Primer Design**\n",
-        "In the below cell, replace the values with those desired for your primers."
+        "If you are unfamiliar with iPython notebooks and google colab, I encourage you to watch the following [introduction](https://www.youtube.com/watch?v=inN8seMm7UI). In general, the cells can be run by pressing the play button next to each cell, and should be run in order."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
-      "id": "acd4690c",
-      "metadata": {
-        "id": "acd4690c"
-      },
-      "outputs": [],
       "source": [
-        "assay_type = 'gDNA' #'gDNA'           #'gDNA' or 'qPCR'\n",
-        "name = 'coeae1f'                      # Name for primer set\n",
-        "contig = '2L'                         # Contig out of 2L, 2R, 3L, 3R and X\n",
-        "amplicon_size_range = [[125,225]]     # How large do we want the amplicon to be? here, e.g 125-225bp\n",
-        "n_primer_pairs = 5                   # How many primer pairs to request\n",
+        "#@title **Selecting Primer Parameters** { run: \"auto\" }\n",
+        "#@markdown In the below cells, replace the values with those desired for your primers.\n",
         "\n",
-        "target_loc = 28_547_500               # gDNA primers only. This should be the location in base pairs of where you want the primers to target. underscores mean nothing and are just helpful for reading large numbers. \n",
-        "transcript = 'AGAP006227-RA'          # qPCR primers only.  "
-      ]
+        "assay_type = 'gDNA'           #@param [\"gDNA\", \"qPCR\"]\n",
+        "assay_name = 'coeae1f'              #@param {type:\"string\"}\n",
+        "min_amplicon_size = 50        #@param {type:\"integer\"}\n",
+        "max_amplicon_size = 100       #@param {type:\"integer\"}\n",
+        "amplicon_size_range = [[min_amplicon_size, max_amplicon_size]]\n",
+        "n_primer_pairs = 5            #@param {type:\"slider\", min:1, max:20, step:1}\n",
+        "\n",
+        "#@markdown    \n",
+        "#@markdown target_loc is required for gDNA primers, and transcript required for qPCR primers.\n",
+        "contig =  \"2L\"                #@param {type:\"string\"}\n",
+        "\n",
+        "target_loc =            5000#@param {type:\"integer\"}\n",
+        "transcript =  'AGAP006227-RA'         #@param {type:\"string\"} \n",
+        "\n",
+        "\n",
+        "if assay_type == 'gDNA':\n",
+        "  assert target_loc > 0, \"Target location must be above 0 and less than the contig length\"\n",
+        "elif assay_type == 'qPCR':\n",
+        "  assert len(transcript) > 2, \"Transcript ID is not valid, should be vectorbase ID such as 'AGAP004707-RD'\""
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "SV03ewwc9de8"
+      },
+      "id": "SV03ewwc9de8",
+      "execution_count": 20,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -149,37 +143,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "id": "5fa0be8d",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "5fa0be8d",
-        "outputId": "47c4d7bc-535a-408a-950e-98887a2a671d"
+        "id": "5fa0be8d"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Our genome sequence for 2L is 49364325 bp long\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/malariagen_data/ag3.py:260: UserWarning: \n",
-            "Your currently allocated Google Colab VM is not located in the US.\n",
-            "This usually means that data access will be substantially slower.\n",
-            "If possible, select \"Runtime > Factory reset runtime\" from the menu\n",
-            "to request a new VM and try again.\n",
-            "\n",
-            "  \"\"\"\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Connect to the malariagen_data ag3 API\n",
         "ag3 = malariagen_data.Ag3() #pre=True\n",
@@ -199,7 +168,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "id": "R0CkEd38VXGY",
       "metadata": {
         "colab": {
@@ -251,7 +220,7 @@
         "outputId": "4edda5f1-dbfa-44bf-d6c0-876f4b0097c1"
       },
       "id": "nDaWXq7f9hyA",
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -280,7 +249,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "id": "622ac6d9",
       "metadata": {
         "id": "622ac6d9"
@@ -288,7 +257,7 @@
       "outputs": [],
       "source": [
         "seq_parameters = {\n",
-        "        'SEQUENCE_ID': name,\n",
+        "        'SEQUENCE_ID': assay_name,\n",
         "        'SEQUENCE_TEMPLATE': target_sequence,\n",
         "    }\n",
         "\n",
@@ -330,7 +299,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "id": "ae6e7525",
       "metadata": {
         "id": "ae6e7525",
@@ -353,7 +322,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "id": "1bb40846",
       "metadata": {
         "colab": {
@@ -405,7 +374,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "id": "bf8c5970",
       "metadata": {
         "colab": {
@@ -683,14 +652,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "09eQYSeT7lHG",
       "metadata": {
         "id": "09eQYSeT7lHG"
       },
       "outputs": [],
       "source": [
-        "primer_df.to_csv(f\"{name}.{assay_type}.primers.tsv\", sep=\"\\t\")"
+        "primer_df.to_csv(f\"{assay_name}.{assay_type}.primers.tsv\", sep=\"\\t\")"
       ]
     },
     {
@@ -707,7 +676,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "id": "61286685",
       "metadata": {
         "colab": {
@@ -752,7 +721,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "id": "iSTRbVpxD3oy",
       "metadata": {
         "id": "iSTRbVpxD3oy",
@@ -1509,7 +1478,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "id": "49ca7f2b",
       "metadata": {
         "id": "49ca7f2b"
@@ -1535,7 +1504,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "id": "shXKBpG49LSU",
       "metadata": {
         "colab": {
@@ -1567,7 +1536,7 @@
         "                                                sample_set=sample_set, \n",
         "                                                n_primer_pairs=n_primer_pairs , \n",
         "                                                assay=assay_type, \n",
-        "                                                name=name,\n",
+        "                                                name=assay_name,\n",
         "                                                target=target_loc,\n",
         "                                                save=True) \n",
         "elif assay_type == 'qPCR':\n",
@@ -1577,7 +1546,7 @@
         "                                                sample_set=sample_set, \n",
         "                                                n_primer_pairs=n_primer_pairs,\n",
         "                                                assay=assay_type,\n",
-        "                                                name=name, \n",
+        "                                                name=assay_name, \n",
         "                                                target=transcript,\n",
         "                                                exon_junctions=exon_junctions,\n",
         "                                                save=True)\n"
@@ -1611,7 +1580,7 @@
         "outputId": "773146ab-ac87-4ec7-feb6-7b7c4a2be1b6"
       },
       "id": "cAacbw-q8Sgm",
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1629,7 +1598,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "id": "0JA92ApBcxLo",
       "metadata": {
         "colab": {
